# systemd-doctor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
src/systemd_doctor/: __init__.py  cli.py  formatting.py  security.py  status.py  systemctl.py  timers.py
tests/: conftest.py  test_cli.py  test_formatting.py  test_security.py  test_status.py  test_systemctl.py  test_systemctl_fuzz.py  test_timers.py
tests/fixtures/: list_timers_ok.txt  list_timers_overdue.txt  list_units_failed.txt  list_units_healthy.txt  security_output.txt  unit_restarts.txt
