[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systemd-doctor"
version = "0.1.0"
description = "Fleet health CLI for systemd — traffic-light status, overdue timers, crash loops, security scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Annas Mazhar", email = "annas.mazhar10@gmail.com" }]
keywords = ["systemd", "cli", "monitoring", "homelab", "devops", "health-check"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=7.0",
    "pytest-cov>=5.0",
]

[project.scripts]
systemd-doctor = "systemd_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/AnnasMazhar/systemd-doctor"
Issues = "https://github.com/AnnasMazhar/systemd-doctor/issues"
Source = "https://github.com/AnnasMazhar/systemd-doctor"

[tool.hatch.build.targets.wheel]
packages = ["src/systemd_doctor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
